--- a/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
+++ b/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
@@ -1,13 +1,175 @@
 <div id="Tab3" class="tabcontent">
-  <div class="tab-header">
-    <div class="tab-heading">Publish POC</div>
-
-    <hr>
-    <div class="row">
-      <iframe width="1300" height="500" id='iframe' [src]=iframeUrl frameborder="0"></iframe>
+  <div class="image" style="background-image:url(assets/images/publish-poc/background.jpg)">
+    <div class="container">
+      <br><br><br>
+      <div class="card">
+        <img src="assets/images/publish-poc/Hivezen-logo.svg">
+        <div>
+        </div>
+        <img src="assets/images/publish-poc/Raj.png"
+          style="width:200px ;padding-left:90px; position: absolute;top: 200px;">
+        <img class="card-img-top" src="assets/images/publish-poc/portrait-focus-man-working-home.png">
+      </div>
     </div>
+    <div id="accordion" role="tablist">
+      <div class="card1">
+        <div class="card-header" role="tab" id="headingOne" style="background-color:rgb(80, 23, 80)">
+          <h5 class="mb-0">
+            <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"
+              style="color:white">
+              Welcome
+            </a>
+          </h5>
+        </div>
+        <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne"
+          data-parent="#accordion">
+          <div class="card-body1" style="background-color: white;">
+            <br />
+            <div style="margin-left: 20px;">
+              <p>Dear Mr.Harihara Sudhan Gopalakrishnan,</p><br />
+              <p>Thank you for the opportunity to submit a proposal for Freight Exchange's solution</p><br />
+              <p>Freight Exchange is an enterprise-grade sales platform, able to help your sales teams engage with their
+                customers throughout the entire sales process.
+                Freight Exchange offers Sales Playbooks, CPQ, Content Generation, Web-based content sharing, Contract
+                Management
+                with Redlining </p>
+              <p>
+                and E-Signature,all from a single solution Freight Exchange integrates seamlessly with Salesforce.com
+                and
+                comes
+                pre-packaged with the wide and comprehensive array of built-in functionality that can be quickly
+                and easily configured to suit different sales environments,without any coding.
+              </p><br />
+              <p>We are confident you will derive exceptional benefits and a considerable return on investment with
+                purchase
+                of
+                Freight Exchange and look forward to adding you to our
+                growing list of satisfied customers.</p>
+              <br />
+              <br />
+              <p>Sincerely,</p><br />
+              <p><strong>P.Rajasekaran</strong>|Chief Products Officer</p>
+              <p>Bahwan CyberTek</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--card2-->
 
-    <div class="row">
-      <button class="btn button-save mt-5 ml-5">Publish POC</button>
+      <div class="card2" style="margin-top:10px;">
+        <div class="card-header" role="tab" id="headingtwo" style="background-color:rgb(80, 23, 80)">
+          <h5 class="mb-0">
+            <a data-toggle="collapse" href="#collapsetwo" aria-expanded="true" aria-controls="collapsetwo"
+              style="color: white;">
+              Customer Video Testimonial
+            </a>
+          </h5>
+        </div>
+        <div id="collapsetwo" class="collapse show" role="tabpanel" aria-labelledby="headingtwo"
+          data-parent="#accordion">
+          <div class="card-body2">
+            <div style="background-image:url(assets/images/publish-poc/video-background.svg)">
+              <img src="assets/images/publish-poc/video.png">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--card3-->
+      <div class="card3" style="margin-top:10px;">
+        <div class="card-header" role="tab" id="headingthree" style="background-color:rgb(80, 23, 80)">
+          <h5 class="mb-0">
+            <a data-toggle="collapse" href="#collapsethree" aria-expanded="true" aria-controls="collapsethree"
+              style="color: white;">
+              We're trusted by the fastest growing companies
+            </a>
+          </h5>
+        </div>
+        <div id="collapsethree" class="collapse show" role="tabpanel" aria-labelledby="headingthree"
+          data-parent="#accordion">
+          <div class="card-body3">
+            <div class="grid-container">
+              <div class="logo1">
+                <img src="assets/images/publish-poc/dropthought-logo.svg">
+              </div>
+              <div class="logo2">
+                <img src="assets/images/publish-poc/BCT_Logo.svg">
+              </div>
+              <div class="logo3">
+                <img src="assets/images/publish-poc/BCT-Tibco-logo-color.svg">
+              </div>
+              <div class="logo4">
+                <img src="assets/images/publish-poc/ingenuity_logo.svg">
+              </div>
+              <div class="logo5">
+                <img src="assets/images/publish-poc/dt360-logo.svg">
+              </div>
+              <div class="logo6">
+                <img src="assets/images/publish-poc/bahwan-DHL-logo.svg">
+              </div>
+              <div class="logo7">
+                <img src="assets/images/publish-poc/bct-digital-logo.svg">
+              </div>
+              <div class="logo8">
+                <img src="assets/images/publish-poc/bct_consulting.svg">
+              </div>
+              <br><br>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--card4-->
+      <div class="card4" style="margin-top:10px;">
+        <div class="card-header" role="tab" id="headingfour" style="background-color:rgb(80, 23, 80)">
+          <h5 class="mb-0">
+            <a data-toggle="collapse" href="#collapsefour" aria-expanded="true" aria-controls="collapsefour"
+              style="color: white;">
+              Prototype
+            </a>
+          </h5>
+        </div>
+        <div id="collapsefour" class="collapse show" role="tabpanel" aria-labelledby="headingfour"
+          data-parent="#accordion">
+          <div class="card-body4">
+
+            <img src="assets/images/publish-poc/prototype.svg">
+
+          </div>
+        </div>
+      </div>
+      <!--card5-->
+      <div class="card5" style="margin-top:10px;">
+        <div class="card-header" role="tab" id="headingfive" style="background-color:rgb(80, 23, 80)">
+          <h5 class="mb-0">
+            <a data-toggle="collapse" href="#collapsefive" aria-expanded="true" aria-controls="collapsefour"
+              style="color: white;">
+              Process flow
+            </a>
+          </h5>
+        </div>
+        <div id="collapsefive" class="collapse show" role="tabpanel" aria-labelledby="headingfive"
+          data-parent="#accordion">
+          <div class="card-body5">
+            <img src="assets/images/publish-poc/HiveZen-workflow.svg">
+          </div>
+        </div>
+      </div>
+      <!--card 6-->
+      <div class="card6" style="margin-top:10px;">
+        <div class="card-header" role="tab" id="headingsix" style="background-color:rgb(80, 23, 80)">
+          <h5 class="mb-0">
+            <a data-toggle="collapse" href="#collapsesix" aria-expanded="true" aria-controls="collapsesix"
+              style="color: white;">
+              Review Summary
+            </a>
+          </h5>
+        </div>
+        <div id="collapsesix" class="collapse show" role="tabpanel" aria-labelledby="headingsix"
+          data-parent="#accordion">
+          <div class="card-body6">
+            <img src="assets/images/publish-poc/Word-Cloud.png">
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
