--- a/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
+++ b/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
@@ -1,31 +1,111 @@
 <div id="Tab3" class="tabcontent">
-  <div class="image" style="background-image:url(assets/images/publish-poc/background.jpg)">
-    <div class="container">
-      <br><br><br>
-      <div class="card">
-        <img src="assets/images/publish-poc/Hivezen-logo.svg">
-        <div>
-        </div>
-        <img src="assets/images/publish-poc/Raj.png"
-          style="width:200px ;padding-left:90px; position: absolute;top: 200px;">
-        <img class="card-img-top" src="assets/images/publish-poc/portrait-focus-man-working-home.png">
+  <div class="tab-header">
+  <div class="tab-heading">POC Setup</div>
+<div class="col-sm-10 mb-5">
+    <form class="form-horizontal">
+      <div class="form-group">
+        <div class="row pt-20">
+          <label class="control-label width-125 ft-bold width-150">Background image</label>
+          <div class="col-lg-9">
+            <input formcontrolname="uploadFile" id="uploadFile" type="file" name="uploadFile" class="ng-untouched ng-pristine ng-valid" ng-reflect-name="uploadFile">
+          </div>
+       </div>  
       </div>
+      <div class="form-group">
+        <div class="row pt-20">
+          <label class="control-label width-125 ft-bold width-150">Firstpage image</label>
+          <div class="col-lg-9">
+            <input formcontrolname="uploadFile" id="uploadFile" type="file" name="uploadFile" class="ng-untouched ng-pristine ng-valid" ng-reflect-name="uploadFile">
+          </div>
+       </div>  
+      </div>
+      <div class="form-group">
+        <div class="row pt-20">
+          <label class="control-label width-125 ft-bold width-150">POC Name</label>
+          <div class="col-lg-9">
+            <input type="text"  class="txt-outline w-50" >
+          </div>
+       </div>  
+      </div>
+      <div class="form-group">
+        <div class="row pt-20">
+          <label class="control-label width-125 ft-bold width-150">Welcome Note</label>
+          <div class="col-lg-9">
+            <textarea rows="3" class="form-control rounded-0 bg-white" id="documentType"></textarea>
+          </div>
+       </div>  
+      </div>
+      <div class="form-group">
+        <div class="row pt-20">
+          <label class="control-label width-125 ft-bold width-150">Video Link</label>
+          <div class="col-lg-9">
+            <input type="text"  class="txt-outline w-50" >
+          </div>
+       </div>  
+      </div>
+    
+    <div class="form-group">
+      <div class="row pt-20">
+        <label class="control-label width-125 ft-bold width-150">Content</label>
+        <div class="col-lg-9">
+          <label  class="checkbox-inline">
+            <input  class="txt-outline" type="checkbox" value=""><span class="txt-gray">Process Flow
+            </span>
+          </label>
+          <label class="checkbox-inline">
+            <input class="txt-outline" type="checkbox" value=""><span class="txt-gray">Application Flow</span>
+          </label>
+          <label class="checkbox-inline">
+            <input  class="txt-outline" type="checkbox" value=""><span class="txt-gray">Wireframe</span>
+          </label>
+          <label class="checkbox-inline">
+            <input class="txt-outline" type="checkbox" checked><span class="txt-gray">Prototype</span>
+          </label>
+        </div>
+     </div>  
     </div>
-    <div id="accordion" role="tablist">
-      <div class="card1">
+    <div class="row pt-1 pb-2">   
+      <label class="control-label width-125 ft-bold width-150">&nbsp;</label>                         
+      <div class="col-lg-9 text-right ">
+          <button class="btn button-save ml-3">Publish</button>
+      </div>                                                       
+      </div>
+
+  </form>
+  
+
+</div>
+
+  <div class="bg" >
+
+    <div class="container" style="padding-top: 4px;">
+
+      <div class="row bg-white mb-10 ">
+        <div class="col-lg-4 user_profile" >
+          <img src="assets/images/publish-poc/Hivezen-logo.svg" width="150px"><br>     <br>      
+            <img src="assets/images/publish-poc/Raj.png"
+               style="width:200px;">
+            <h3 style="margin: opx;">P. RajaSekaran</h3>
+        </div>
+        <div class="col-lg-8">
+          <img class="card-img-top" src="assets/images/publish-poc/portrait-focus-man-working-home.png">
+        </div>
+      </div>
+
+      <div class="card1 mb-10">
         <div class="card-header" role="tab" id="headingOne" style="background-color:rgb(80, 23, 80)">
           <h5 class="mb-0">
             <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"
-              style="color:white">
+              style="color:white;font-size: 16px;padding-left: 15px;">
               Welcome
             </a>
           </h5>
         </div>
         <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne"
           data-parent="#accordion">
-          <div class="card-body1" style="background-color: white;">
+          <div class="card-body1" style="background-color: white;opacity: 0.95;height:100%">
             <br />
-            <div style="margin-left: 20px;">
+            <div style="padding: 24px;">
               <p>Dear Mr.Harihara Sudhan Gopalakrishnan,</p><br />
               <p>Thank you for the opportunity to submit a proposal for Freight Exchange's solution</p><br />
               <p>Freight Exchange is an enterprise-grade sales platform, able to help your sales teams engage with their
@@ -56,38 +136,50 @@
       </div>
       <!--card2-->
 
-      <div class="card2" style="margin-top:10px;">
+      <div class="card2 mb-10" style="margin-top:10px;">
         <div class="card-header" role="tab" id="headingtwo" style="background-color:rgb(80, 23, 80)">
           <h5 class="mb-0">
             <a data-toggle="collapse" href="#collapsetwo" aria-expanded="true" aria-controls="collapsetwo"
-              style="color: white;">
+              style="color:white;font-size: 16px;padding-left: 15px;">
               Customer Video Testimonial
             </a>
           </h5>
         </div>
         <div id="collapsetwo" class="collapse show" role="tabpanel" aria-labelledby="headingtwo"
           data-parent="#accordion">
-          <div class="card-body2">
-            <div style="background-image:url(assets/images/publish-poc/video-background.svg)">
-              <img src="assets/images/publish-poc/video.png">
+          <div class="card-body2" style="background-image:url(assets/images/publish-poc/video-background.svg);">
+            <div  class="videobg" >
+              <img  class="videoimg" src="assets/images/publish-poc/video.png">
             </div>
           </div>
         </div>
       </div>
       <!--card3-->
-      <div class="card3" style="margin-top:10px;">
+      <div class="card3 mb-10" style="margin-top:10px; background-color:#F4F7F9;">
         <div class="card-header" role="tab" id="headingthree" style="background-color:rgb(80, 23, 80)">
           <h5 class="mb-0">
             <a data-toggle="collapse" href="#collapsethree" aria-expanded="true" aria-controls="collapsethree"
-              style="color: white;">
+              style="color:white;font-size: 16px;padding-left: 15px;">
               We're trusted by the fastest growing companies
             </a>
           </h5>
         </div>
+      
         <div id="collapsethree" class="collapse show" role="tabpanel" aria-labelledby="headingthree"
-          data-parent="#accordion">
-          <div class="card-body3">
-            <div class="grid-container">
+          data-parent="#accordion" >
+          <div class="card-body3" style="height: 400px;margin-right: 30px;">
+
+            
+              
+            <div class="row">   
+
+            <div class="col-lg-2">
+              <div class="logo1" style="padding-top: 40px;padding-left: 25px;">
+                <img src="assets/images/logo.png">
+              </div>
+            </div>
+            <div class="col-lg-10">
+            <div class="grid-container" style="padding-top: 70px;">
               <div class="logo1">
                 <img src="assets/images/publish-poc/dropthought-logo.svg">
               </div>
@@ -112,19 +204,26 @@
               <div class="logo8">
                 <img src="assets/images/publish-poc/bct_consulting.svg">
               </div>
-              <br><br>
-
-
             </div>
+          </div>
+          <div class="col-lg-2">
+            &nbsp;
+          </div>
+          <div class="col-lg-10">
+            <div class="text-gray" style="padding-top: 15px;font-size:16px;">
+            Join over 1000+ teams that manage their work better
+            </div>
+          </div>
+        </div>
           </div>
         </div>
       </div>
       <!--card4-->
-      <div class="card4" style="margin-top:10px;">
+      <div class="card4 mb-10" style="margin-top:10px;">
         <div class="card-header" role="tab" id="headingfour" style="background-color:rgb(80, 23, 80)">
           <h5 class="mb-0">
             <a data-toggle="collapse" href="#collapsefour" aria-expanded="true" aria-controls="collapsefour"
-              style="color: white;">
+              style="color:white;font-size: 16px;padding-left: 15px;">
               Prototype
             </a>
           </h5>
@@ -132,18 +231,16 @@
         <div id="collapsefour" class="collapse show" role="tabpanel" aria-labelledby="headingfour"
           data-parent="#accordion">
           <div class="card-body4">
-
-            <img src="assets/images/publish-poc/prototype.svg">
-
+            <img src="assets/images/publish-poc/prototype.svg">  
           </div>
         </div>
       </div>
       <!--card5-->
-      <div class="card5" style="margin-top:10px;">
+      <div class="card5 mb-10" style="margin-top:10px;">
         <div class="card-header" role="tab" id="headingfive" style="background-color:rgb(80, 23, 80)">
           <h5 class="mb-0">
             <a data-toggle="collapse" href="#collapsefive" aria-expanded="true" aria-controls="collapsefour"
-              style="color: white;">
+              style="color:white;font-size: 16px;padding-left: 15px;">
               Process flow
             </a>
           </h5>
@@ -156,20 +253,25 @@
         </div>
       </div>
       <!--card 6-->
-      <div class="card6" style="margin-top:10px;">
+      <div class="card6 mb-10" style="margin-top:10px;">
         <div class="card-header" role="tab" id="headingsix" style="background-color:rgb(80, 23, 80)">
           <h5 class="mb-0">
             <a data-toggle="collapse" href="#collapsesix" aria-expanded="true" aria-controls="collapsesix"
-              style="color: white;">
+              style="color: white;font-size: 16px;padding-left: 15px;">
               Review Summary
             </a>
           </h5>
         </div>
         <div id="collapsesix" class="collapse show" role="tabpanel" aria-labelledby="headingsix"
           data-parent="#accordion">
-          <div class="card-body6">
-            <img src="assets/images/publish-poc/Word-Cloud.png">
+          <div class="card-body6" style="height:400px">
+            <img src="assets/images/publish-poc/Word-Cloud.png" style="padding-right: 100px;">
           </div>
         </div>
       </div>
+
     </div>
+
+  </div>
+</div>
+</div>
