--- a/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.css
+++ b/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.css
@@ -1,16 +1,56 @@
 div#headingOne{
-  background-color: rgb(80, 23, 80);
+  background-color:  #7C4791;
   border-radius: 6px;
 }
 div#headingtwo{
-  background-color: rgb(80, 23, 80);
+  background-color: #7C4791;
   /*
   height: 71px;
   padding: 23px;
   */
   border-radius: 6px;
-  
 }
+.contain_text_tab{
+  
+  width: 50%;
+    background-color:#E6E6E6;
+    border: 1px solid;
+    padding-left: 10px;
+}
+.total_count_tab{
+  background-color: #F3F3F3;
+  border:1px solid black;
+  padding: 10px;
+  font-weight: 200;
+}
+th{
+  text-align: left;
+}
+.table_view{
+  width: 100%;
+}
+.table-class{
+margin: 20px 20px;
+
+}
+.contain_text{
+  border:1px solid #E4E3E3;
+  padding: 5px;
+  color: #AFAFAF;
+ 
+}
+.total_count{
+  padding: 15px;
+  color: #F4F7F9;
+  background-color: #7C4791;
+}
+  .col-lg-6{
+    padding-right: 1px solid gray;
+  }
+  h4{
+    font-size: 20px;
+    margin-top: 20%;
+  }
 div#headingthree{
   background-color: rgb(80, 23, 80);  
   border-radius: 6px;
@@ -117,7 +157,7 @@ p {
   background-color: white;
   text-align: center;
   padding: 20px 0;
-  font-size: 50px;
+  font-size: 21px;
 }
 .section-spacing {
   margin-top: 50px;
@@ -125,6 +165,28 @@ p {
 .checkbox-inline{
   padding-left: 20px;
 }
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 100px; 
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* .test{
+margin: 20px;
+} */
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .width-150 {
   width: 150px;
 }
