--- a/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
+++ b/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
@@ -1,11 +1,14 @@
+<main class="mr-15">
 <div id="Tab3" class="tabcontent">
   <div class="tab-header">
-    <div class="tab-heading">POC Setup</div>
+    <div class="page-heading mt-0">POC Setup</div>
     <div class="col-sm-10 mb-5">
       <form class="form-horizontal">
         <div class="form-group">
-          <div class="row pt-20">
-            <label class="control-label width-125 ft-bold width-150">Background image</label>
+          <div class="row">
+            <div class="col-lg-3">
+            <label class="control-label">Background image</label>
+          </div>
             <div class="col-lg-9">
               <input formcontrolname="uploadFile" id="uploadFile" type="file" name="uploadFile"
                 class="ng-untouched ng-pristine ng-valid" ng-reflect-name="uploadFile">
@@ -13,8 +16,10 @@
           </div>
         </div>
         <div class="form-group">
-          <div class="row pt-20">
-            <label class="control-label width-125 ft-bold width-150">Firstpage image</label>
+          <div class="row">
+            <div class="col-lg-3">
+            <label class="control-label">Firstpage image</label>
+            </div>
             <div class="col-lg-9">
               <input formcontrolname="uploadFile" id="uploadFile" type="file" name="uploadFile"
                 class="ng-untouched ng-pristine ng-valid" ng-reflect-name="uploadFile">
@@ -22,24 +27,30 @@
           </div>
         </div>
         <div class="form-group">
-          <div class="row pt-20">
-            <label class="control-label width-125 ft-bold width-150">POC Name</label>
+          <div class="row">
+            <div class="col-lg-3">
+            <label class="control-label">POC Name</label>
+            </div>
             <div class="col-lg-9">
               <input type="text" class="txt-outline w-50">
             </div>
           </div>
         </div>
         <div class="form-group">
-          <div class="row pt-20">
-            <label class="control-label width-125 ft-bold width-150">Welcome Note</label>
+          <div class="row">
+            <div class="col-lg-3">
+            <label class="control-label">Welcome Note</label>
+            </div>
             <div class="col-lg-9">
               <textarea rows="3" class="form-control rounded-0 bg-white" id="documentType"></textarea>
             </div>
           </div>
         </div>
         <div class="form-group">
-          <div class="row pt-20">
-            <label class="control-label width-125 ft-bold width-150">Video Link</label>
+          <div class="row">
+            <div class="col-lg-3">
+            <label class="control-label">Video Link</label>
+            </div>
             <div class="col-lg-9">
               <input type="text" class="txt-outline w-50">
             </div>
@@ -47,8 +58,10 @@
         </div>
 
         <div class="form-group">
-          <div class="row pt-20">
-            <label class="control-label width-125 ft-bold width-150">Content</label>
+          <div class="row">
+            <div class="col-lg-3">
+            <label class="control-label">Content</label>
+            </div>
             <div class="col-lg-9">
               <label class="checkbox-inline">
                 <input class="txt-outline" type="checkbox" value=""><span class="txt-gray">Process Flow
@@ -66,10 +79,12 @@
             </div>
           </div>
         </div>
-        <div class="row pt-1 pb-2">
-          <label class="control-label width-125 ft-bold width-150">&nbsp;</label>
-          <div class="col-lg-9 text-right ">
-            <button class="btn button-save ml-3">Publish</button>
+        <div class="row">
+          <div class="col-lg-3">
+          <label class="control-label"></label>
+          </div>
+          <div class="col-lg-9">
+            <button class="btn button-save">Publish</button>
           </div>
         </div>
 
@@ -78,7 +93,7 @@
 
     </div>
 
-    <div class="bg">
+    <div class="bg section-spacing">
 
       <div class="container" style="padding-top: 4px;">
 
@@ -348,3 +363,10 @@
     </div>
   </div>
 </div>
+
+</main>
+<footer>
+  <div class="container-fluid">
+      <div class="footer">©HiveZen.All rights reserved</div>
+  </div>
+</footer>
