--- a/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
+++ b/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
@@ -1,3 +1,24 @@
+<div id="Tab3" class="tabcontent">
+  <div class="tab-header">
+    <div class="tab-heading">Publish POC</div>
+
+    <hr>
+    <div class="row">
+      <iframe width="1300" height="500" src="https://xd.adobe.com/embed/3b9d29ca-9012-4709-8a0a-b4866f42a2de-6ece/"
+        frameborder="0"></iframe>
+    </div>
+
+    <div class="row" style="padding-bottom: 5px;">
+      <button class="btn button-save mt-5 ml-5">Publish POC</button>
+    </div>
+    <br>
+
+
+
+  </div>
+</div>
+
+<!--
 <main class="mr-15">
 <div id="Tab3" class="tabcontent">
   <div class="tab-header">
@@ -151,8 +172,6 @@
             </div>
           </div>
         </div>
-        <!--card2-->
-
         <div class="card2 mb-10" style="margin-top:10px;">
           <div class="card-header" role="tab" id="headingtwo" style="background-color:rgb(80, 23, 80)">
             <h5 class="mb-0">
@@ -171,7 +190,6 @@
             </div>
           </div>
         </div>
-        <!--card3-->
         <div class="card3 mb-10" style="margin-top:10px; background-color:#F4F7F9;">
           <div class="card-header" role="tab" id="headingthree" style="background-color:rgb(80, 23, 80)">
             <h5 class="mb-0">
@@ -235,7 +253,6 @@
             </div>
           </div>
         </div>
-        <!--card4-->
         <div class="card4 mb-10" style="margin-top:10px;">
           <div class="card-header" role="tab" id="headingfour" style="background-color:rgb(80, 23, 80)">
             <h5 class="mb-0">
@@ -252,7 +269,6 @@
             </div>
           </div>
         </div>
-        <!--card5-->
         <div class="card5 mb-10" style="margin-top:10px;">
           <div class="card-header" role="tab" id="headingfive" style="background-color:rgb(80, 23, 80)">
             <h5 class="mb-0">
@@ -269,7 +285,6 @@
             </div>
           </div>
         </div>
-        <!--card 6-->
         <div class="card6 mb-10" style="margin-top:10px;">
           <div class="card-header" role="tab" id="headingsix" style="background-color:rgb(80, 23, 80)">
             <h5 class="mb-0">
@@ -370,3 +385,4 @@
       <div class="footer">©HiveZen.All rights reserved</div>
   </div>
 </footer>
+-->
