--- a/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
+++ b/src/app/work-space/work-space-publish-poc/work-space-publish-poc.component.html
@@ -1,23 +1,26 @@
-<div id="Tab3" class="tabcontent">
-  <div class="tab-header">
-    <div class="tab-heading">Publish POC</div>
+<main class="mr-15">
+  <div class="container-fluid">
+    <div id="Tab3" class="tabcontent">
+      <div class="tab-header">
+        <div class="page-heading mt-0">Publish POC</div>
+        <div class="row mt-40">
+          <div class="col-sm-12">
+            <div class="iframe-container" style="border: 1px solid #7C4791;">
+          <iframe width="100%" height="500" id='iframe' src="https://xd.adobe.com/embed/3b9d29ca-9012-4709-8a0a-b4866f42a2de-6ece/" frameborder="0"></iframe>
+        </div>
+        </div>
+        </div>
+        <div class="row" style="padding-bottom: 5px;padding-left: 10px;">
+          <button class="btn button-save mt-5 ml-5">Publish POC</button>
+        </div>
+        <br>
 
-    <hr>
-    <div class="row">
-      <iframe width="1300" height="500" src="https://xd.adobe.com/embed/3b9d29ca-9012-4709-8a0a-b4866f42a2de-6ece/"
-        frameborder="0"></iframe>
+
+
+      </div>
     </div>
-
-    <div class="row" style="padding-bottom: 5px;">
-      <button class="btn button-save mt-5 ml-5">Publish POC</button>
-    </div>
-    <br>
-
-
-
   </div>
-</div>
-
+</main>
 <!--
 <main class="mr-15">
 <div id="Tab3" class="tabcontent">
